6/40/64 ban system, auth owner start.
